# ATEAMS

./: .gitignore  Makefile  README.md  hex_test  pyproject.toml
ateams/: __init__.py
ateams/complexes/: Hexagonal
ateams/models/: Bernoulli.py  Glauber.py  InvadedCluster.py  InvasionPercolation.py  Model.py  Nienhuis.py  SwendsenWang.py  __init__.py  models.md
ateams/statistics/: Chain.py  __init__.py  autocorrelation.pyx  homology.py
docs/: index.html
docs/arithmetic/: index.html
docs/complexes/: index.html
docs/models/: index.html
docs/statistics/: Chain.html  accepts.html  autocorrelation.html  cutoffs.html  homology.html  index.html  observables.html  schedules.html
docs/templates/: head.mako  logo.mako
test/: .vars  Bernoulli.py  IC.py  IP.py  profile.models.IP.py  profile.models.IP.sh  test.compression.py
