
[build-system]
requires = ["Cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ateams"
version = "2.2.0"
description = "Algebraic Topology-Enabled AlgorithMs for Spin systems"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "Cython",
    "numpy",
    "tqdm",
    "packaging",
    "lz4"
]

[tool.setuptools]
py-modules = ["ateams"]
